fix: change spacing between testimonial elem

--- a/sass/layout/_columns.scss
+++ b/sass/layout/_columns.scss
@@ -40,6 +40,6 @@
     }
     &_testimonials {
         align-items: flex-start;
-        gap: 170px;
+        gap: 80px;
     }
 }
