--- a/sass/style.css
+++ b/sass/style.css
@@ -895,7 +895,7 @@ h2 > * {
 }
 .layout-3-column_testimonials {
   align-items: flex-start;
-  gap: 170px;
+  gap: 80px;
 }
 
 /*# sourceMappingURL=style.css.map */
